# khala

./: Cargo.toml  README.md  install.sh  uninstall.sh
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: Architecture.md  Configuration.md  Installation.md  RVC-Voice-Cloning.md  Troubleshooting.md  index.md
khala-config/: config.toml  prompt.txt
khala-core/: Cargo.toml
khala-core/src/: audio.rs  config.rs  lib.rs  metrics.rs  pipeline.rs  protocol.rs  rvc.rs  websocket.rs
khala-rvc/: macos_compat.py  main.py  processor.py  requirements.txt  server.py
src/: audio.rs  cli.rs  config.rs  main.rs  metrics.rs  pipeline.rs  protocol.rs  ui.rs  websocket.rs
