[package]
name = "khala"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "time"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
tungstenite = "0.26"
futures-util = "0.3"
cpal = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
anyhow = "1"
http = "1"
