[workspace]
members = ["khala-core"]

[package]
name = "khala"
version = "0.1.0"
edition = "2024"

[dependencies]
khala-core = { path = "khala-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net"] }
anyhow = "1"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
clap = { version = "4", features = ["derive"] }
which = "7"
